fdo#57611 don't crash when setting too small size

setHeight/Width needs to be authorized to throw com::sun::star::beans::PropertyVetoException, which is already handled adequately

Change-Id: I077fbf7e3b871a59446fb3e23cc9fa1e2e9272a2